[metadata]
name = wkflws_twilio
version = attr: wkflws_twilio.__version__
author = wkflws node developer
description = "wkflws node - wkflws_twilio"
# url = https://my-url.com
# project_urls =
#     Bug Tracker = https://github.com/myorg/wkflws_twilio/issues/
#     Source = https://github.com/myorg/wkflws_twilio/
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.10
packages = find:
install_requires =
    # Twilio Client
    # License: MIT
    #https://github.com/twilio/twilio-python/blob/main/LICENSE
    twilio >= 7.9.3,<8.0.0

[options.extras_require]
testing =
    # The following libraries are not hosted or distributed.
    black  # automatic formatter
    coverage  # unit test coverage analyzer
    flake8   # style checker
    flake8-docstrings   # verify docstring formatting
    flake8-import-order  # verify import order
    mypy  # static type checker
    pytest  # unit test discovery and runner
    pytest-cov  # plugin for the coverage module
    pytest-mock  # pytest wrapper for mock module


# https://coverage.readthedocs.io/en/6.3.2/config.html
[coverage:run]
# Measure branch coverage
branch = True
# To omit certain files
# omit = # e.g. src/db/env.py,src/db/versions/*
# Indicate the directories to evaluate
source = wkflws_twilio/

[coverage:report]
# show missing line numbers
show_missing = True
# Omit files with 100% coverage from the report
# skip_covered = True
